Archive2/b1/1ef9fec52a9887/output
main.cpp:1:1: error: stray ‘\342’ in program
 №#include <iostream>
 ^
main.cpp:1:1: error: stray ‘\204’ in program
main.cpp:1:1: error: stray ‘\226’ in program
main.cpp:1:4: error: stray ‘#’ in program
 №#include <iostream>
    ^
main.cpp:25:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:49:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:1:5: error: ‘include’ does not name a type
 №#include <iostream>
     ^
In file included from main.cpp:2:0:
/usr/include/c++/4.8/exception:35:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
